--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
           launch deals.
         </p>
         <form class="info-form">
-          <input class="email-input" type="email" placeholder="Email Address" />
+          <input class="email-input" type="text" placeholder="Email Address" />
           <a href="#" class="btn-link">
             <span class="btn">
               <img class="arrow" src="images/icon-arrow.svg" alt="arrow" />
             </span>
           </a>
         </form>
+        <p class="warning">Please provide a valid email</p>
       </div>
+      
     </section>
 
     <footer>
@@ -57,5 +59,6 @@
         >. Coded by <a href="#">Omieibi Amapakabo</a>.
       </p>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
