--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Favicon -->
     <link
       rel="icon"
       type="image/png"
@@ -19,6 +21,7 @@
 
     <!-- Style Sheet -->
     <link rel="stylesheet" href="css/styles.css" />
+    
 
     <title>Frontend Mentor | Base Apparel coming soon page</title>
   </head>
@@ -40,6 +43,7 @@
         </p>
         <form class="info-form">
           <input class="email-input" type="text" placeholder="Email Address" />
+          <img class="error"src="images/icon-error.svg" alt="error">
           <a href="#" class="btn-link">
             <span class="btn">
               <img class="arrow" src="images/icon-arrow.svg" alt="arrow" />
